# biodiversitymetric3

./: .gitignore  README.md  index.md  introduction.md  numerics.yml  pyproject.toml  test.md
examples/: turnden.json
examples/turnden/: baseline.json  creation.json  enhancement.json
metric/: __init__.py  config.json  core.py  habitat.py  report.py  scenario.py  turnden.yml  typing.py
original_data/: create_datasheet.py  difficulty.tsv  distinctiveness.tsv
tests/: test_habitat.py
utils/: concat_json.py  tsv_to_json.py
utils/config/: build_config.sh  generate_json.py
utils/config/exported_data/: creation_difficulty.tsv  creation_time.tsv  distinctiveness.tsv  enhancement_difficulty.tsv  enhancement_time.tsv  globals.json  groups.tsv
